# wombat

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cargo-sources.json  index.html  io.github.archisman_panigrahi.wombat.Devel.json  io.github.archisman_panigrahi.wombat.json  meson.build  todo.md
.github/workflows/: flatpak.yml
build-aux/: build-wombat.sh
data/: io.github.archisman_panigrahi.wombat.desktop  io.github.archisman_panigrahi.wombat.gschema.xml  io.github.archisman_panigrahi.wombat.metainfo.xml
debian/: changelog  control  copyright  install  rules
src/: about.rs  main.rs  output.rs  session.rs  theme.rs  ui.rs
