[package]
name = "wombat"
version = "0.6.0"
edition = "2021"
license = "GPL-3.0-or-later"
build = "build.rs"

[dependencies]
adw = { package = "libadwaita", version = "0.9", features = ["v1_9"] }
gtk = { package = "gtk4", version = "0.11" }
numbat = { version = ">1.11.0", default-features = false }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = true
